# pulumi-eos

./: .commitlintrc.yaml  .containerignore  .cspell.json  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
cmd/pulumi-eos-gen/: main.go
cmd/pulumi-resource-eos/: main.go  main_test.go
deployments/compose/: compose.dev.yml  compose.integration.yml  compose.lint.yml  compose.veos.yml  veos-bootstrap.sh
deployments/containers/: Containerfile.dev  Containerfile.release  containers.conf  registries.conf
docs/: 01-architecture.md  02-implementation-plan.md  03-resource-catalog.md  04-provider-config.md  05-development.md  06-testing.md  07-release.md  08-research-references.md  09-emulators.md  09-go-style.md  README.md  STATUS.md
examples/: README.md
internal/config/: clients.go  config.go
internal/provider/: config.go  provider.go
internal/version/: version.go  version_test.go
scripts/: integration-bootstrap.sh  lint-mermaid.sh  lint-probes.sh  pre-commit-golangci-lint.sh  vuln-audit.go
tools/probe_audit/: .gitignore  README.md  pyproject.toml
tools/probe_audit/probe_audit/: __init__.py  __main__.py  client.py  harness.py  surfaces.py
(+116 files in other folders)
